adjust responsive and fix alignment of full website

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,11 @@
       z-index: 9999;
     }
 
+    .border-light {
+    --bs-border-opacity: 1;
+    border-color: rgb(248 249 250 / 15%) !important;
+}
+
     /* Header Styles */
     .main-header {
       transition: all 0.3s ease;
